removed unused addModulesDirs Parameter